# blitzkriging

./: .CMakeLists.txt.swp  .gitignore  .gitmodules  CMakeLists.txt
CMake/Modules/: FindOpenBLAS.cmake
inc/: blitzkriging.h
inc/kernel/: dummy.h  kernel.h  spectral.h  sqexp.h
src/: play.cu
test/: .TestCUDASqDist.cu.swo  TestCUDASqDist.cu  TestHostSqDist.cu  TestTBBSqDist.cu
